--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-MONGO_DEV_URL=mongodb://localhost:27017/todo
+# MONGO_DEV_URL=mongodb://localhost:27017/todo
 
 
-PORT= 5000
+# PORT= 5000
+
+MONGO_URL=mongodb+srv://sachin:64PMkjQxawCVXRQf@atlascluster.20p7ayb.mongodb.net/expence-tracker
+PORT=5000
