--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@
 
 # PORT= 5000
 
-MONGO_URL=mongodb+srv://sachin:64PMkjQxawCVXRQf@atlascluster.20p7ayb.mongodb.net/expence-tracker
+MONGO_URL=mongodb+srv://sachin:64PMkjQxawCVXRQf@atlascluster.20p7ayb.mongodb.net/tdoforpratice
 PORT=5000
